data/derived/sp14/progs/unify/prog3030.ml.out
Characters 11-17:
   (sin, 4 * 3.1415);;
             ^^^^^^
Error: This expression has type float but an expression was expected of type
         int
